# research-backend-challenge-2024-q1

./: README.md
participantes/luisgsilva/: Dockerfile
participantes/luisgsilva/api/: __init__.py
participantes/luisgsilva/api/domain/customer/dao/: customer_dao.py  postgresql_customer_dao.py
participantes/luisgsilva/api/domain/transaction/dao/: postgresql_transaction_dao.py  transaction_dao.py
participantes/luisgsilva/api/domain/transaction/models/: bank_statement.py
participantes/luisgsilva/api/domain/transaction/service/: transaction_service.py
participantes/luisgsilva/api/dto/: TransactionRequestDTO.py
participantes/luisgsilva/api/shared/: exceptions.py
participantes/luisgsilva/config/: cnginx.conf
participantes/luisgsilva/sql/: script.sql
python/: docker-compose.yaml  pyproject.toml
python/api/: controller.py
python/api/domain/customer/models/: customer.py
python/api/domain/transaction/models/: transaction.py
python/api/shared/: config.py
python/config/: postgresql.conf
python/tests/: transaction_dao_test.py
